<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="@string/nav_login" />

        <item
            android:id="@+id/nav_registration"
            android:title="@string/nav_registration" />

        <item
            android:id="@+id/nav_forgot_password"
            android:title="@string/nav_forgot_password" />

        <item
            android:id="@+id/nav_reset_password"
            android:title="@string/nav_reset_password" />

        <item
            android:id="@+id/nav_ride_history"
            android:title="@string/nav_ride_history"
            android:icon="@drawable/ic_clock_white" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/ic_person" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout" />

</menu>