<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Auth Section -->
    <group
        android:id="@+id/nav_group_auth"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_nav_login"
            android:title="@string/nav_login" />

        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_nav_register"
            android:title="@string/nav_registration" />

        <item
            android:id="@+id/nav_forgot_password"
            android:icon="@drawable/ic_nav_forgot"
            android:title="@string/nav_forgot_password" />

        <item
            android:id="@+id/nav_reset_password"
            android:icon="@drawable/ic_nav_reset"
            android:title="@string/nav_reset_password" />

    </group>

    <!-- Divider -->
    <item android:title="">
        <menu>
            <!-- Logout -->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
