<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_ride_history_details_sheet"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_md"
    android:paddingTop="@dimen/spacing_sm"
    android:paddingEnd="@dimen/spacing_md"
    android:paddingBottom="@dimen/spacing_md">

    <View
        android:layout_width="44dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing_sm"
        android:background="@drawable/bg_ride_history_sheet_handle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ride_tracking_inconsistency_sheet_title"
            android:textSize="@dimen/text_lg" />

        <ImageView
            android:id="@+id/inconsistencyCloseButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/bg_ride_history_sheet_close"
            android:contentDescription="@string/ride_tracking_inconsistency_sheet_close"
            android:padding="7dp"
            android:src="@drawable/ic_close_simple"
            app:tint="@color/text_medium" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inconsistencyNoteLayout"
        style="@style/Widget.Drumigo.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/ride_tracking_inconsistency_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inconsistencyNoteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="3"
            android:maxLength="1000" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/inconsistencyErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:textColor="@color/error"
        android:textSize="@dimen/text_sm"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/inconsistencySubmitButton"
        style="@style/Widget.Drumigo.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/ride_tracking_inconsistency_submit" />
</LinearLayout>
